force-app/main/default/objects/GroupMember__c/GroupMember__c.object-meta.xml
<CustomObject>
    <label>GroupMember</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GroupMember Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>