force-app/main/default/objects/GroupMember__c/fields/Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Member_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>