force-app/main/default/objects/GroupMember__c/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>