force-app/main/default/objects/GroupMember__c/fields/memberRole__c.field-meta.xml
<CustomField>
    <fullName>memberRole__c</fullName>
    <label>memberRole</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>memberType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>企业业务部长</fullName>
            </value>
            <value>
                <fullName>渠道业务主管</fullName>
            </value>
            <value>
                <fullName>生态合作leader</fullName>
            </value>
            <value>
                <fullName>代表处代表</fullName>
            </value>
            <value>
                <fullName>相关行业主管</fullName>
            </value>
            <value>
                <fullName>MKT销售部主管</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>