force-app/main/default/objects/GroupMember__c/fields/memberType__c.field-meta.xml
<CustomField>
    <fullName>memberType__c</fullName>
    <label>memberType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>常设成员</fullName>
            </value>
            <value>
                <fullName>决策成员</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>